fix registration mobile

--- a/src/components/Registration/Registration.scss
+++ b/src/components/Registration/Registration.scss
@@ -76,6 +76,7 @@
       justify-self: right;
     }
 
+    /*
     .RegistrationForm-ErrorMessage {
       grid-row: 5;
       grid-column: 1/3;
@@ -84,6 +85,8 @@
       word-wrap: break-word;
       padding-top: 5%;
     }
+    */
+
     .RegistrationForm-Button {
       grid-row: 6;
       grid-column: 1/3;
@@ -99,6 +102,71 @@
     }
     .RegistrationForm-Button:disabled {
       background-color: $red-inactive;
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-mobile-max){
+  .RegistrationSection {
+    .RegistrationSection-Message_success {
+      font-size: 0.8em;
+    }
+
+    .RegistrationForm {
+      border-radius: 0;
+      grid-template-rows: repeat(7, auto);
+      grid-template-columns: 100%;
+
+      .RegistrationForm-Field {
+        width: 100%;
+        justify-self: center;
+        grid-column: 1;
+        padding: 5%;
+
+      }
+      .RegistrationForm-Field_name {
+        grid-row: 1;
+      }
+
+      .RegistrationForm-Field_surname {
+        grid-row: 2;
+      }
+
+      .RegistrationForm-Field_gender {
+        grid-row: 3;
+        align-self: center;
+
+        .RegistrationForm-RadioFieldLabel {
+          padding-top: 5%;
+        }
+        .RegistrationForm-RadioFieldGroup {
+          .RegistrationForm-RadioButton {
+          }
+        }
+      }
+
+      .RegistrationForm-Field_card {
+        grid-row: 4;
+
+        .RegistrationForm-CardInput {
+          padding-top: 5%;
+          border: none;
+        }
+        .RegistrationForm-CardInput:focus {
+          outline: none;
+        }
+      }
+      .RegistrationForm-Field_isLoyalty {
+        grid-row: 5;
+      }
+
+      .RegistrationForm-Field_coupon {
+        grid-row: 6;
+      }
+      .RegistrationForm-Button {
+        grid-row: 7;
+        height: 40px;
+      }
     }
   }
 }
